@@ -262,7 +262,6 @@ public class DataDumpUtil {
 
     private DataDumpRequest prepareDataDumpReq(ETLRequestLogEntity etlRequestLogEntity) {
         DataDumpRequest dataDumpRequestForAwaiting=new DataDumpRequest();
-        dataDumpRequestForAwaiting.setImsDepositoryCodes(Arrays.asList(etlRequestLogEntity.getImsRepositoryCodes()));
         dataDumpRequestForAwaiting.setFetchType(etlRequestLogEntity.getFetchType());
         dataDumpRequestForAwaiting.setOutputFileFormat(etlRequestLogEntity.getOutputFormat());
         dataDumpRequestForAwaiting.setTransmissionType(etlRequestLogEntity.getTransmissionType());
@@ -270,9 +269,11 @@ public class DataDumpUtil {
                 .split(",")).map(Integer::parseInt)
                 .collect(Collectors.toList());
         dataDumpRequestForAwaiting.setCollectionGroupIds(collectionGroupIds);
-        dataDumpRequestForAwaiting.setImsDepositoryCodes(Arrays.asList(etlRequestLogEntity.getImsRepositoryCodes()));
+        List<String> imsRepositoryList = List.of(etlRequestLogEntity.getImsRepositoryCodes().split(","));
+        dataDumpRequestForAwaiting.setImsDepositoryCodes(imsRepositoryList);
         dataDumpRequestForAwaiting.setRequestingInstitutionCode(etlRequestLogEntity.getRequestingInstCode());
-        dataDumpRequestForAwaiting.setInstitutionCodes(Arrays.asList(etlRequestLogEntity.getInstCodeToExport()));
+        List<String> institutionList = List.of(etlRequestLogEntity.getInstCodeToExport().split(","));
+        dataDumpRequestForAwaiting.setInstitutionCodes(institutionList);
         dataDumpRequestForAwaiting.setDate(etlRequestLogEntity.getProvidedDate()!=null?String.valueOf(etlRequestLogEntity.getProvidedDate()):null);
         dataDumpRequestForAwaiting.setDateTimeString(DateUtil.getDateTimeString());
         dataDumpRequestForAwaiting.setRequestFromSwagger(true);
